--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,11 @@
 {
+
+  
+    "rewrites": [
+      { "source": "/(.*)", "destination": "/" }
+    ],
+  
+
   "builds": [
   {
   "src": "./app.js",
