--- a/vercel.json
+++ b/vercel.json
@@ -8,14 +8,14 @@
 
   "builds": [
   {
-  "src": "./app.js",
+  "src": "./server.js",
   "use": "@vercel/node"
   }
   ],
   "routes": [
   {
   "src": "/.*",
-  "dest": "app.js"
+  "dest": "server.js"
   }
   ]
   }
