--- a/vercel.json
+++ b/vercel.json
@@ -1,21 +1,8 @@
 {
-
-  
-    "rewrites": [
-      { "source": "/(.*)", "destination": "/" }
-    ],
-  
-
-  "builds": [
-  {
-  "src": "./server.js",
-  "use": "@vercel/node"
-  }
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/" }
   ],
   "routes": [
-  {
-  "src": "/.*",
-  "dest": "server.js"
-  }
+    { "src": "/(.*)", "dest": "/server.js" }
   ]
-  }
+}
