--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,21 @@
 {
-  "rewrites": [
-    { "source": "/(.*)", "destination": "/" }
+
+  
+    "rewrites": [
+      { "source": "/(.*)", "destination": "/" }
+    ],
+  
+
+  "builds": [
+  {
+  "src": "./server.js",
+  "use": "@vercel/node"
+  }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "/server.js" }
+  {
+  "src": "/.*",
+  "dest": "server.js"
+  }
   ]
-}
+  }
